<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.SecondActivity">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="81dp"
            android:layout_height="27dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="126dp"
            android:src="@drawable/ic_mini_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="135dp"
            android:src="@drawable/ic_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="79dp"
            android:src="@drawable/ic_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="17dp"
            android:layout_height="13dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="25dp"
            android:src="@drawable/ic_hamburger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="28dp"
            android:layout_height="33dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="124dp"
            android:src="@drawable/ic_upload"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view"
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="157dp"
            android:layout_marginEnd="270dp"
            android:layout_marginBottom="944dp"
            android:text="@string/text_upload"
            android:textSize="14sp"
            app:lineHeight="24dp"
            android:textColor="@color/text_blue"
            android:gravity="center"
            android:textAlignment="center"
            android:fontFamily="@font/barlow_light"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/bitmap"
            android:layout_width="127dp"
            android:layout_height="127dp"
            android:layout_marginStart="123dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="125dp"
            android:layout_marginBottom="910dp"
            android:src="@drawable/profile_img"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView_edit"
            android:layout_width="28dp"
            android:layout_height="33dp"
            android:layout_marginTop="129dp"
            android:layout_marginEnd="57dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_edit"
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_marginTop="157dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/barlow_light"
            android:text="@string/text_edit"
            android:textSize="14sp"
            app:lineHeight="24dp"
            android:textColor="@color/text_blue"
            android:gravity="center"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="267dp"
            android:layout_height="28dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="222dp"
            android:layout_marginEnd="58dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="22sp"
            app:lineHeight="28dp"
            android:layout_marginBottom="875dp"
            android:text="@string/text_name"
            android:textColor="@color/black"
            android:fontFamily="@font/barlow_extra_light"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textview_artist"
            android:layout_width="113dp"
            android:layout_height="24dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="275dp"
            android:fontFamily="@font/barlow_light"
            android:text="@string/artist_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_switch"
            android:layout_width="56dp"
            android:layout_height="35dp"
            android:layout_marginTop="271dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_switcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="308dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="815dp"
            android:background="@color/line_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/tv1"
            android:layout_width="75dp"
            android:layout_height="29dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="319dp"
            android:layout_marginEnd="260dp"
            android:textAlignment="center"
            android:layout_marginBottom="777dp"
            android:text="2.3k"
            android:textSize="24dp"
            android:textColor="@color/black"
            android:fontFamily="@font/barlow_light"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="69dp"
            android:layout_height="34dp"
            android:layout_marginStart="147dp"
            android:layout_marginTop="319dp"
            android:fontFamily="@font/barlow_light"
            android:text="50"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24dp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="75dp"
            android:layout_height="29dp"
            android:layout_marginStart="243dp"
            android:layout_marginTop="319dp"
            android:layout_marginEnd="57dp"
            android:textAlignment="center"
            android:layout_marginBottom="777dp"
            android:text="21"
            android:textSize="24dp"
            android:textColor="@color/black"
            android:fontFamily="@font/barlow_light"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvsub1"
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_marginStart="57dp"
            android:layout_marginTop="344dp"
            android:layout_marginEnd="238dp"
            android:layout_marginBottom="757dp"
            android:text="Followers"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:fontFamily="@font/barlow_light"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvsub2"
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_marginStart="164dp"
            android:layout_marginTop="344dp"
            android:layout_marginEnd="131dp"
            android:layout_marginBottom="757dp"
            android:text="Artworks"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:fontFamily="@font/barlow_light"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvsub3"
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_marginStart="255dp"
            android:layout_marginTop="344dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="757dp"
            android:text="Exhibitions"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:fontFamily="@font/barlow_light"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="379dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="744dp"
            android:background="@color/line_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView_heart"
            android:layout_width="19dp"
            android:layout_height="16dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="402dp"
            android:layout_marginEnd="268dp"
            android:layout_marginBottom="707dp"
            android:src="@drawable/ic_like"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvsub4"
            android:layout_width="48dp"
            android:layout_height="42dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="387dp"
            android:layout_marginEnd="215dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="696dp"
            android:text="120"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/barlow_light"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView_up"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="154dp"
            android:layout_marginTop="400dp"
            android:src="@drawable/ic_upvote"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvsub5"
            android:layout_width="48dp"
            android:layout_height="42dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="387dp"
            android:layout_marginEnd="152dp"
            android:layout_marginBottom="696dp"
            android:gravity="center_vertical"
            android:text="43K"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/barlow_light"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_share"
            android:layout_width="14dp"
            android:layout_height="16dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="401dp"
            android:layout_marginEnd="141dp"
            android:layout_marginBottom="708dp"
            android:src="@drawable/ic_share"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvsub6"
            android:layout_width="48dp"
            android:layout_height="42dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="387dp"
            android:layout_marginEnd="87dp"
            android:layout_marginBottom="696dp"
            android:gravity="center_vertical"
            android:text="2.3k"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/barlow_light"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_color"
            android:layout_width="341dp"
            android:layout_height="42dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="437dp"
            android:layout_marginEnd="17dp"
            android:src="@drawable/pallete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_color"
            app:tabIconTint="@color/black"
            app:tabSelectedTextColor="@android:color/black">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_upload"
                    android:text="Uploads" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_portfolio"
                    android:text="Exhibitions" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_revenue"
                    android:text="Revenue" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="21dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>